--- a/src/xdpd/drivers/gnu_linux_dpdk/src/Makefile.am
+++ b/src/xdpd/drivers/gnu_linux_dpdk/src/Makefile.am
@@ -4,7 +4,7 @@ SUBDIRS = hal-imp io processing pipeline-imp util#Add more here...
 
 noinst_LTLIBRARIES = libxdpd_driver_gnu_linux_dpdk_src.la
 
-libxdpd_driver_gnu_linux_dpdk_src_la_SOURCES = bg_taskmanager.cc config.cc
+libxdpd_driver_gnu_linux_dpdk_src_la_SOURCES = bg_taskmanager.cc config.cc config_rss.c
 libxdpd_driver_gnu_linux_dpdk_src_la_LIBADD = \
 		hal-imp/libxdpd_driver_gnu_linux_dpdk_src_hal_imp.la\
 		io/libxdpd_driver_gnu_linux_dpdk_src_io.la\
